--- a/res/layout/activity_devices_list.xml
+++ b/res/layout/activity_devices_list.xml
@@ -3,24 +3,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#ffffff"
     tools:context="com.jiavan.leapinglight.DevicesListActivity" >
 
-    <TextView 
-        android:id="@+id/tv_head"
+    <RelativeLayout 
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#ff0000"/>
+        android:orientation="horizontal"
+        >
+        <Button 
+            android:id="@+id/bt_about"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:textSize="30sp"
+            android:background="#ffffff"
+            android:text="关于"/>
+        <Button 
+            android:id="@+id/bt_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+			android:layout_alignParentRight="true"
+			android:layout_centerVertical="true"
+			android:textSize="30sp"
+			android:background="#ffffff"
+            android:text="扫描"/>
+    </RelativeLayout>
     <ListView 
         android:id="@+id/lv_devices"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:cacheColorHint="#00333333"
         android:layout_weight="3"/>
     <TextView 
         android:id="@+id/tv_bottom"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#00ff00"/>
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="跳过"
+        android:textSize="30sp"
+        android:background="#ffffff"
+        android:clickable="true"
+        />
 
 </LinearLayout>
