--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#0D0D0D"
     android:orientation="vertical" >
     
     <TextView 
@@ -12,7 +13,7 @@
         android:text="LeapingLight"
         android:textSize="40dp"
         android:gravity="center"
-        android:background="#000000"/>
+        />
     <LinearLayout 
         android:id="@+id/lv_light_power"
         android:orientation="horizontal"
@@ -26,7 +27,6 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#000000"
             >
             <TextView 
                 android:layout_width="fill_parent"
@@ -39,7 +39,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_gravity="center_horizontal"
-                android:background="#aabbcc"
                 />
         </LinearLayout>
         <LinearLayout 
@@ -48,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#000000">
+            >
             <TextView 
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -60,7 +59,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_gravity="center_horizontal"
-                android:background="#aabbcc"
                 />
         </LinearLayout>
         <LinearLayout 
@@ -69,7 +67,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#000000">
+            >
             <TextView 
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -81,7 +79,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_gravity="center_horizontal"
-                android:background="#aabbcc"
                 />
         </LinearLayout>
     </LinearLayout>
@@ -91,12 +88,11 @@
         android:gravity="center"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:background="#000000">
+        >
     	<ImageButton 
     	    android:id="@+id/ib_power"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
-    	    android:background="#ff00ff"
     	    />
     </LinearLayout>
 
